# alla-morra

./: .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  FEEDBACK.md  README.md  SLACK_DEBRIEF.md
contracts/bet-note/: Cargo.toml
contracts/bet-note/src/: lib.rs
contracts/house-account/: Cargo.toml
contracts/house-account/src/: lib.rs
integration/: Cargo.toml
integration/src/: helpers.rs
integration/tests/: morra_test.rs
patches/getrandom/: Cargo.toml
patches/getrandom/src/: lib.rs
patches/wasi/: Cargo.toml
patches/wasi/src/: lib.rs
patches/wasip2/: Cargo.toml
patches/wasip2/src/: lib.rs
