[package]
name = "integration"
version = "0.1.0"
edition.workspace = true

[dependencies]
cargo-miden = { version = "0.7" }
miden-client = { version = "0.13", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "0.13", package = "miden-client-sqlite-store" }
miden-standards = { version = "0.13", default-features = false, features = ["testing"] }
miden-core = { version = "0.20" }
miden-testing = "0.13"
miden-mast-package = { version = "0.20", default-features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs", "time"] }
rand = { version = "0.9" }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
