[package]
name = "house-account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.10" }

[package.metadata.component]
package = "miden:house-account"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountImmutableCode"]

# Patch wasip2 with a no_std stub to avoid duplicate-core conflict when
# cargo-miden uses -Z build-std. The real wasip2 crate links extern crate std,
# which produces a different core hash than build-std's freshly compiled one.
[patch.crates-io]
wasip2 = { path = "../../patches/wasip2" }
wasi = { path = "../../patches/wasi" }
